Add Types Swagger
